--- a/playbook-01.yml
+++ b/playbook-01.yml
@@ -4,3 +4,7 @@
     - name: Print message
       debug:
         msg: Hello Ansible World
+    - name: copy file
+      copy:
+        src: /tmp/index.html
+        dest: /tmp/odcdev/ansible-practice
